--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "expo": "^49.0.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
@@ -21,7 +22,8 @@
     "react-native-paper": "^5.9.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4"
   },
   "private": true
 }
