--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-dotenv": "^3.4.9",
-    "react-native-paper": "^5.9.1"
+    "react-native-paper": "^5.9.1",
+    "react-native-table-component": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
