Ordenes casi completo, filtrado, busqueda, estilo, solicitud SQL, implementacion de fuentes

--- a/app.json
+++ b/app.json
@@ -14,6 +14,16 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "fonts": {
+      "asset": "./assets/fonts/",
+      "includes": [
+        "Bold.ttf",
+        "Medium.ttf",
+        "Regular.ttf",
+        "Light.ttf",
+        "SemiBold.ttf"
+      ]
+    },
     "ios": {
       "supportsTablet": true
     },
