--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "expo": "^49.0.2",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.1",
+    "react-native": "0.72.3",
     "react-native-dotenv": "^3.4.9",
     "react-native-paper": "^5.9.1",
-    "react-native-table-component": "^1.2.2"
+    "react-native-table-component": "^1.2.2",
+    "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
