--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
@@ -21,7 +22,10 @@
     "react-native": "0.72.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.9",
+    "react-native-gesture-handler": "^2.12.1",
     "react-native-paper": "^5.9.1",
+    "react-native-paper-dropdown": "^1.0.7",
+    "react-native-reanimated": "~3.3.0",
     "react-native-table-component": "^1.2.2",
     "react-native-toast-message": "^2.1.6"
   },
