--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-paper": "^5.9.1",
+    "react-native-paper-dates": "^0.18.13",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-reanimated": "~3.3.0",
     "react-native-table-component": "^1.2.2",
-    "react-native-toast-message": "^2.1.6"
+    "react-native-toast-message": "^2.1.6",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
