--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "mysql2": "^3.4.2",
     "nodemon": "^2.0.22"
   }
