--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-native": "0.72.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.9",
@@ -27,9 +29,11 @@
     "react-native-paper": "^5.9.1",
     "react-native-paper-dates": "^0.18.13",
     "react-native-paper-dropdown": "^1.0.7",
+    "react-native-paper-form-builder": "^2.1.2",
     "react-native-reanimated": "~3.3.0",
     "react-native-table-component": "^1.2.2",
     "react-native-toast-message": "^2.1.6",
+    "react-native-web": "~0.19.6",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1"
   },
